[project]
name = "videolingo"
version = "3.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.0"
dependencies = [
    "autocorrect-py>=2.14.0",
    "clearvoice>=0.1.2",
    "ctranslate2==4.4.0",
    "demucs[dev]",
    "edge-tts>=7.2.3",
    "g2p-en>=2.1.0",
    "inquirerpy>=0.3.4",
    "ipython>=8.37.0",
    "json-repair>=0.52.2",
    "librosa==0.10.2.post1",
    "lightning==2.3.3",
    "moviepy==1.0.3",
    "numpy==1.26.4",
    "openai==1.55.3",
    "opencv-python==4.10.0.84",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pydub==0.25.1",
    "pypinyin>=0.55.0",
    "pytorch-lightning==2.3.3",
    "pyyaml==6.0.2",
    "replicate==0.33.0",
    "requests==2.32.3",
    "resampy==0.4.3",
    "ruamel-yaml>=0.18.15",
    "spacy==3.7.4",
    "streamlit==1.38.0",
    "syllables>=1.1.1",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "transformers==4.39.3",
    "whisperx",
    "xmltodict>=1.0.2",
    "yt-dlp>=2025.10.14",
]

[tool.uv.sources]
demucs = { git = "https://github.com/adefossez/demucs" }
whisperx = { git = "https://github.com/m-bain/whisperx.git", rev = "7307306a9d8dd0d261e588cc933322454f853853" }
