[project]
name = "index-tts-vllm-uv"
version = "3.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.0"
dependencies = [
    "vllm==0.10.2",
    "descript-audiotools",
    "matplotlib==3.8.2",
    "omegaconf",
    "sentencepiece",
    "librosa",
    "gradio",
    "ninja",
    "modelscope",
    "munch==4.0.0",
    "loguru",
    "WeTextProcessing",
]
